# shika

./: Cargo.toml
.shika/: config.yaml
app/src/: commands.rs
crates/renderer/src/: filter.rs  lib.rs
crates/shika/: Cargo.toml  README.md
crates/shika/src/: error.rs  lib.rs  main.rs
crates/shika/src/commands/: generate.rs  mod.rs  pull.rs
crates/shika_database/: Cargo.toml  README.md
crates/shika_database/src/: database.rs  error.rs  lib.rs
crates/shika_renderer/: Cargo.toml  README.md
crates/shika_renderer/src/: database.rs  error.rs  lib.rs
crates/shika_workspace/: Cargo.toml  README.md
crates/shika_workspace/src/: config.rs  error.rs  lib.rs  workspace.rs
