[workspace]
resolver = "2"
members = ["app", "crates/*"]
default-members = ["app"]

[workspace.dependencies]
anyhow = "1.0.95"
db = { path = "crates/db" }
renderer = { path = "crates/renderer" }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
