[workspace]
resolver = "3"
members = [
    "crates/shika",
    "crates/shika_database",
    "crates/shika_renderer",
    "crates/shika_workspace",
]

[workspace.dependencies]
shika_workspace = { path = "crates/shika_workspace" }
shika_database = { path = "crates/shika_database" }
shika_renderer = { path = "crates/shika_renderer" }

serde = { version = "1.0.219", features = ["derive"] }
serde_yml = { version = "0.0.12" }
