[package]
name = "shika"
description = "Shika CLI"
version = "0.1.2"
edition = "2024"
homepage = "https://github.com/netrune-company/shika"
repository = "https://github.com/netrune-company/shika"
readme = "README.md"
license = "MIT"

[dependencies]
shika_workspace.workspace = true
shika_database.workspace = true
shika_renderer.workspace = true
dotenvy = { version = "0.15.7" }
clap = { version = "4.5.39", features = ["derive", "env"] }
tokio = { version = "1.45.1", features = ["full"] }
