[package]
name = "shika_database"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_yml.workspace = true
itertools = { version = "0.14.0" }
futures = { version = "0.3.31" }
sqlx = { version = "0.8.2", features = [
    "all-databases",
    "runtime-tokio",
    "derive",
] }
