[package]
name = "shika_database"
description = "Shika Database"
version = "0.0.3"
edition = "2024"
homepage = "https://github.com/netrune-company/shika"
repository = "https://github.com/netrune-company/shika"
readme = "README.md"
license = "MIT"

[dependencies]
serde.workspace = true
serde_yml.workspace = true
itertools = { version = "0.14.0" }
futures = { version = "0.3.31" }
sqlx = { version = "0.8.2", features = [
    "all-databases",
    "runtime-tokio",
    "derive",
] }
