[package]
name = "shika_workspace"
description = "Shika Workspace"
version = "0.0.3"
edition = "2024"
homepage = "https://github.com/netrune-company/shika"
repository = "https://github.com/netrune-company/shika"
readme = "README.md"
license = "MIT"

[dependencies]
shika_database.workspace = true
serde.workspace = true
serde_yml.workspace = true
